--- a/index.html
+++ b/index.html
@@ -225,5 +225,8 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 </div></div></div>
 <SCRIPT charset="utf-8" type="text/javascript" src="//ws-fe.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=JP&ID=V20070822%2FJP%2Faloha15amazon-22%2F8009%2F3e5af678-bd34-43fc-99f9-ed6c2265906b&Operation=GetScriptTemplate"> </SCRIPT> <NOSCRIPT><A rel="nofollow" HREF="//ws-fe.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=JP&ID=V20070822%2FJP%2Faloha15amazon-22%2F8009%2F3e5af678-bd34-43fc-99f9-ed6c2265906b&Operation=NoScript">Amazon.co.jp ウィジェット</A></NOSCRIPT>
 Copyright &copy; 2015<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, All Rigths Reserved.
+<script type="text/javascript">
+document.write("Last Update: " + document.lastModified +);
+</script>
 </body>
 </html>
