--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <META http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
 <META http-equiv="Content-Type" content="text/html; charset=EUC-JP">
 <script type="text/javascript" src="http://gc.kis.scr.kaspersky-labs.com/1B74BD89-2A22-4B93-B451-1C9E1052A0EC/main.js" charset="UTF-8"></script>
-<script type="text/javascript">
-document.write("Last Update: " + document.lastModified +);
-</script>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -227,5 +224,6 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 </div></div></div>
 Copyright &copy; 2015<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, All Rigths Reserved.
+<script>document.write("Last Update: " + document.lastModified +);</script>
 </body>
 </html>
