--- a/index.html
+++ b/index.html
@@ -223,7 +223,6 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 </div>
 
 </div></div></div>
-Copyright &copy; 2015<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, All Rigths Reserved.
-<script>document.write("Last Update: " + document.lastModified +);</script>
+Copyright &copy; 2015<script type="text/javascript">new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear()) document.write("Last Update: " + document.lastModified +);</script>
 </body>
 </html>
