--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 <a data-flickr-embed="true" data-header="true" data-footer="true" href="https://www.flickr.com/photos/viaprograms/albums/72157662175767243" title="Design-Thinking for Social Innovation"><img src="https://live.staticflickr.com/1453/24902480446_970d4a11e5_z.jpg" width="640" height="426" alt="Design-Thinking for Social Innovation"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 <a data-flickr-embed="true" data-header="true" data-footer="true" href="https://www.flickr.com/photos/viaprograms/albums/72157673226823833" title="Friends of VIA"><img src="https://live.staticflickr.com/5676/30934820350_6d7c47d776_z.jpg" width="640" height="213" alt="Friends of VIA"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+<div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
+  data-link="https://photos.app.goo.gl/3dLt8ysGCD3F2ABa9"
+  data-title="VIA Next Innovators"
+  data-description="10 new photos added to shared album">
+  <object data="https://lh3.googleusercontent.com/WtdRY7VMzrX0U7nG9uyMjXQiqC0KQ0vR-0jhLGqOWA8p753-kpYyiR969P4CyR_P1qGwdDXhVCyvPM_hVr6cEmGbXNRkxUVadcV40J3XHrQBZUnaMe2AGyfk2QPYEC9eLwjv6m8=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/tRmj6USE7r89bZ1PcwVcRZ8WGCV8VlcStz1FUjWPnXhkAYm_F4R3CMle-2iMzwb9thAlHOboYz2uQ8G8tXohzkE_wpiT4JhiptEhgmwnVhy1-g4yxoiKKZeuCreQo_cn3lch_WQ=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/_Q24Uf7z6LXM6j8MRHIdkmCUeGQyjldXGlWBS7dxgDiCxPnTqNbzYYLOhu4s0Fpavi62nOMZyqZeKK4odgZkh7QM4WNaRvq7nzdpyoPZXvlGHlcQOtqp4k08iY9lMesGh41uEMs=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/UxYZ6n1y19-zmSyMIR3caIqnDoquP0XplyPSW-J3gZoFxPzqMvfE17LlZ91_jUrkitoCOjCBCdZ5Aw4WORW5isT_oLgmHjj-Y4dxhD4Z1qim6POLA7iSuxM3lxpVIwx_pYYs4Aw=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/DClAEg9MOqJqBmdtZ1nWMm_4ZzSpQMX6w4sFefl2td8GLtVQY4HmIwvEFuMvwdl_iipoXlk0muSsbeWr02awwr0HrYH5g2gG0Zn6nejaJQPfO_40rsMWGavRqKwngOwLnQEv7os=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/zBqvIYdTypzOSUgskpBg5S3mzZG9p81bnHKRt8bmT1LNjJOYJ_dCIG97GwQv1G8VanQVU6eZgiAQ5kHdeLOvPOOzCOGTVWXx-vLrgn9gUGuYsUOlImG0J9XUBaWv4ulOLUU5lnc=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/8cir59l7t5zisYisvrutsG1Xw_ltkHpjV7n4d9A-kD2zh3fczqR_VgY7Eu_VjeFGfttat7tqAykgr36W3_zLjSTSruyrPggHlJ0_w4_tSkWfDR35ZhY1iwnwCd86zK-pFKWNJjE=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/31s1zB1N8aeH34TQ5LhASOG5b7vyMm-6SLN2pzlmzasVajCfC18iJP69sd85ads3Yg4da2ebo0CLp1XDnF6g-FFhkqpCEcFljpKM8NJSDO5WvnhfPN0vb3v5ZMjXPVOsB9DIruI=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/vRoU7IhCRuynoIQJCdjzFL6YYchMdTG12dv5l4w0R0L-snuZu_dFLvLkjEE7vhFwaW6Zqpc8ultxxJRzHr3wUB4JDFn1Cqw0mu3UH5Kmgs81UdpQ2XDpb9wnFomAyXQ2KrFIjs8=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/x-LHP61GXBO6IlAocl68Vec2ySzZGL3fPLtW1pfQQEmDoAEqbuT41ueKvXRKvykc7lbdP0yt6hD8hS9s1gg0oTvcGc4erAtJvL2dulbh7AT3oAQs6uDInuGfKpQZvjzMb8GU4AU=w1920-h1080"></object>
+</div>
 
  <div id="ajaxContent"></div>
   <script>
@@ -154,7 +170,7 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 </h2>
 <div style="margin:0px;padding:0px;" align="center">
 <div style="margin:0px;padding:0px;line-height:1.3;">
-<div style="margin:0px;padding:10px;line-height:1.3;overflow:auto;text-align:left;height:200px;">
+<div style="margin:0px;padding:10px;line-height:1.3;overflow:auto;text-align:left;height:300px;">
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">2014</h2>
 <h2 style="margin-top:24px;margin-bottom:16px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46)">
