--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 </div></div></div>
 Copyright &copy; 2015<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, All Rights Reserved.<br>
-<script type="text/javascript">document.write("Last Update: " + new Date(document.lastModified))</script>
+<script type="text/javascript">document.write("Last Update: " + new Date(document.lastModified))</script><br>
 <script type="text/javascript">
 var day = new Date(document.lastModified);
 var y = day.getFullYear();			// Year
