--- a/index.html
+++ b/index.html
@@ -54,17 +54,13 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
 
-<li><a href="https://try.gitea.io/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Gitea</a></li>
-
-<li><a href="https://gitlab.com/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">GitLab</a></li>
+<li><a href="https://try.gitea.io/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Gitea</a>, <a href="https://gitlab.com/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">GitLab</a></li>
 
 <li style="margin-top:0.25em"><a href="https://www.linkedin.com/in/daisuke-kanaizumi-70b95015a/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">LinkedIn</a></li>
 
 <li style="margin-top:0.25em"><a href="https://qiita.com/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214)">Qiita</a></li>
 
-<li style="margin-top:0.25em"><a href="https://www.slideshare.net/DaisukeKanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SlideShare</a></li>
-
-<li style="margin-top:0.25em"><a href="https://speakerdeck.com/daisukekanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SpeakerDeck</a></li></ul>
+<li style="margin-top:0.25em"><a href="https://www.slideshare.net/DaisukeKanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SlideShare</a>, <a href="https://speakerdeck.com/daisukekanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SpeakerDeck</a></li></ul>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#licenses" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Licenses/Lizenzen</h2>
 
