--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@ var y = day.getFullYear();			// Year
 var m = day.getMonth() + 1;			// Month
 var d = day.getDate();				// Day
 document.write("最終更新: " + y + "年" + m + "月" + d + "日");
-</script>
+</script><br>
+<div id="sfcenxddbbbdjg2ex5r4ec1ezkfu78t6r9c"></div><script type="text/javascript" src="https://counter1.wheredoyoucomefrom.ovh/private/counter.js?c=enxddbbbdjg2ex5r4ec1ezkfu78t6r9c&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="page counter"><img src="https://counter1.wheredoyoucomefrom.ovh/private/freecounterstat.php?c=enxddbbbdjg2ex5r4ec1ezkfu78t6r9c" border="0" title="page counter" alt="page counter"></a></noscript>
 </body>
 </html>
