--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
   <object data="https://lh3.googleusercontent.com/j6oDaqi632njvJkgWnYdo5fhMdOCBcyOdRb4go65RF_oGXr_5nQ5ojtjdo5fB-stE_D7PPEiep5Pm7Yg2KNidBy9B1gcYgEbRYx1KpplexDRyXAznxRJvgQFeShoYLwgkrOJvcA=w1920-h1080"></object>
 </div>
 <div class="powr-facebook-feed" id="4c3e688e_1578871801"></div><script src="https://www.powr.io/powr.js?platform=google#"></script>
+<div class="powr-instagram-feed" id="a46b04d9_1578995062"></div><script src="https://www.powr.io/powr.js?platform=webs"></script> 
  <div id="ajaxContent"></div>
   <script>
   var Webflow = Webflow || [];
