--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li>
 <p style="color:#000080">Co-Founder and former representative</p> of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a>
 </li>
-<li>Obtained Master of Engineering at the Graduate School of Waseda University (2019, March)</li>
+<li><b>HTML5, LaTeX, Markdown and Google Sites user (More than 5 years, supported websites for several non-profits)</b></li>
+<li>Obtained Master of Engineering at the Graduate School of Waseda Univ. (2019, March)</li>
 </ul>
+  <div style="margin:0px;padding:0px;" align="center">
+    <div style="margin:0px;padding:0px;line-height:1.3;">
+      <div style="margin:0px;padding:10px;line-height:1.3;overflow:auto;text-align:left;height:350px;">
 <iframe src="https://www.slideshare.net/VIANextInnovators/slideshelf" width="615px" height="470px" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:none;" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
 <iframe src="https://slides.com/vianextinnovatorstokyo/deck-8fa65d/embed" width="550" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <script async class="speakerdeck-embed" data-id="fcd6cf2574f74269b46d77092b3f826c" data-ratio="1.33333" src="//speakerdeck.com/assets/embed.js"></script>
 <div class='embedsocial-instagram' data-ref="101ff39f32c052ee8fb73d49a43973fd4e423939"></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));</script> 
-
+      </div></div></div>
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;pa
 dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#related-links" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Related Links</h2>
 
