--- a/index.html
+++ b/index.html
@@ -374,4 +374,5 @@ document.write("最終更新: " + y + "年" + m + "月" + d + "日");
 </script><br>
 <div id="sfcenxddbbbdjg2ex5r4ec1ezkfu78t6r9c"></div><script type="text/javascript" src="https://counter1.wheredoyoucomefrom.ovh/private/counter.js?c=enxddbbbdjg2ex5r4ec1ezkfu78t6r9c&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="page counter"><img src="https://counter1.wheredoyoucomefrom.ovh/private/freecounterstat.php?c=enxddbbbdjg2ex5r4ec1ezkfu78t6r9c" border="0" title="page counter" alt="page counter"></a></noscript>
 </body>
+<script type="text/javascript"> var infolinks_pid = 3232037; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </html>
