--- a/index.html
+++ b/index.html
@@ -373,6 +373,17 @@ var d = day.getDate();				// Day
 document.write("最終更新: " + y + "年" + m + "月" + d + "日");
 </script><br>
 <div id="sfcenxddbbbdjg2ex5r4ec1ezkfu78t6r9c"></div><script type="text/javascript" src="https://counter1.wheredoyoucomefrom.ovh/private/counter.js?c=enxddbbbdjg2ex5r4ec1ezkfu78t6r9c&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="page counter"><img src="https://counter1.wheredoyoucomefrom.ovh/private/freecounterstat.php?c=enxddbbbdjg2ex5r4ec1ezkfu78t6r9c" border="0" title="page counter" alt="page counter"></a></noscript>
+<script type="text/javascript">
+    var vglnk = {key: 'ea54443c7385f7f9f6ea49bba78363f7'};
+    (function(d, t) {
+        var s = d.createElement(t);
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = '//cdn.viglink.com/api/vglnk.js';
+        var r = d.getElementsByTagName(t)[0];
+            r.parentNode.insertBefore(s, r);
+    }(document, 'script'));
+</script>
 </body>
 <script type="text/javascript"> var infolinks_pid = 3232037; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </html>
