--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 <li style="margin-top:0.25em"><a href="https://www.linkedin.com/in/daisuke-kanaizumi-70b95015a/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">LinkedIn</a></li>
 
-<li style="margin-top:0.25em"><a href="https://qiita.com/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214)">Qiita</a></li>
+<li style="margin-top:0.25em"><a href="https://qiita.com/AlohaTech" rel="nofollow" style="color:rgb(3,102,214)">Qiita</a></li>
 
 <li style="margin-top:0.25em"><a href="https://www.slideshare.net/DaisukeKanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SlideShare</a>, <a href="https://speakerdeck.com/daisukekanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SpeakerDeck</a></li></ul>
 
