--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </li>
 <li><b>HTML5, LaTeX, Markdown and Google Sites user (More than 5 years, supported websites for several non-profits)</b></li>
 <li>Obtained Master of Engineering at the Graduate School of Waseda Univ. (2019, March)</li>
+<li>Adopted by VIA Social Impact Accelerator Program (2020, March)</li>
 </ul>
   <div style="margin:0px;padding:0px;" align="center">
     <div style="margin:0px;padding:0px;line-height:1.3;">
