--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <META http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
 <META http-equiv="Content-Type" content="text/html; charset=EUC-JP">
 <script type="text/javascript" src="http://gc.kis.scr.kaspersky-labs.com/1B74BD89-2A22-4B93-B451-1C9E1052A0EC/main.js" charset="UTF-8"></script>
+<style type="text/css">
+ ul, ol { -ms-column-count: 2; -o-column-count: 2; -moz-column-count: 2; -khtml-column-count: 2; column-count: 2; }
+</style>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
