--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li>Obtained Master of Engineering at the Graduate School of Waseda Univ. (2019, March)</li>
 <li>Adopted by VIA Social Impact Accelerator Program (2020, March)</li>
 <li>Website manager of <a class="dhtgD aw5Odc" href="https://sites.google.com/view/miract/home" target="_blank">MIRACT</a> (2020, April)</li>
+<li><a href="https://www.facebook.com/2.5million.for.Kyushu/">九州250万人会議</a>を応援しています</li>
 </ul>
   <div style="margin:0px;padding:0px;" align="center">
     <div style="margin:0px;padding:0px;line-height:1.3;">
