--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
 <li>English Name: Derek/Duke, kanji: Dai$\to$杕 (NOT included on standard dictionaries)</li>
 <li><p style="color:#000080">Went to Hualalai Academy</p> (Currently known as <a href="https://makualani.com/" rel="nofollow noreferrer noopener" target="_blank">Makua Lani Christian Academy</a> and <a href="https://kuleanaeducation.weebly.com/" rel="nofollow noreferrer noopener" target="_blank">Kuleana Education Academy</a>)</li>
-<li>
-<p style="color:#000080">Co-Founder and former representative</p> of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a>
+<li>Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a>
 </li>
 <li><b>HTML5, LaTeX, Markdown and Google Sites user (More than 5 years, supported websites for several non-profits)</b></li>
 <li>Obtained Master of Engineering at the Graduate School of Waseda Univ. (2019, March)</li>
