--- a/index.html
+++ b/index.html
@@ -80,13 +80,15 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 <li style="margin-top:0.25em"><p style="color:#000080">TOEFL ITP 587 &amp; TOEIC 925 (2015, December)</p></li>
 
+<li style="margin-top:0.25em"><p style="color:#000080">CEFR-B2 (August, 2020)
+
 <li style="margin-top:0.25em">Japan Statistical Society Certificate Grade 2 (2015, November)</li>
 
 <li style="margin-top:0.25em"><p style="color:#000080">Sudoku Certificate/数独検定1級 (2019, April)</p></li></ul>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#awards" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Awards</h2>
 
-<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Seijo H.S. Honor Prize/成城高等学校優等賞 (2011, March)</li></ul>
+<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Seijo H.S. Honor Prize/成城高校優等賞 (2011, March)</li></ul>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#foreign-experience" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Foreign Experiences</h2>
 
@@ -266,13 +268,11 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
   </div>
 </blockquote>
 <script async src="//www.instagram.com/embed.js"></script>
-<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#research-interest" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Academic Interests</h2>
+<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#research-interest" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Technical Interests</h2>
 
-<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Scientific Computing and Numerical Analysis/Algorithms (Computer Arithmetic, Numerical Integration, Root-Finding Algorithms, Computer-Assisted Proofs and&nbsp;<a href="https://en.m.wikipedia.org/wiki/Validated_numerics" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Validated Numerics</a>)</li>
+<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Scientific Computing and Numerical Analysis/Algorithms (Computer Arithmetic, Numerical Integration, Root-Finding Algorithms, Computer-Assisted Proofs and&nbsp;<a href="https://en.m.wikipedia.org/wiki/Validated_numerics" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Numerical Analysis, Validated Numerics</a>)</li>
 
-<li style="margin-top:0.25em">Quantum Calculus ($q$-Calculus, post quantum calculus, Hahn calculus)</li>
-
-<li style="margin-top:0.25em">Special Functions (Functions of matrices, orthogonal polynomials and their $q$-analogs, the family of gamma functions, $q$-Bessel functions and basic/elliptic hypergeometric series)</li></ul>
+<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Scientific Computing and Numerical Analysis/Algorithms (Computer Arithmetic, Numerical Integration, Root-Finding Algorithms, Computer-Assisted Proofs and&nbsp;<a href="https://en.m.wikipedia.org/wiki/Validated_numerics" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">HTML5, LaTeX, Markdown and Google Sites
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#publications" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Publications/Veröffentlichungen</h2>
 
