--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 <li style="margin-top:0.25em"><p style="color:#000080">TOEFL ITP 587 &amp; TOEIC 925 (2015, December)</p></li>
 
-<li style="margin-top:0.25em"><p style="color:#000080">CEFR-B2 (August, 2020)
+<li style="margin-top:0.25em"><p style="color:#000080">CEFR-B2 by the British Council (August, 2020)
 
 <li style="margin-top:0.25em">Japan Statistical Society Certificate Grade 2 (2015, November)</li>
 
