--- a/index.html
+++ b/index.html
@@ -451,6 +451,10 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 Copyright &copy; 2015<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, All Rights Reserved.<br>
 <script type="text/javascript">document.write("Last Update: " + new Date(document.lastModified))</script><br>
+<script type="text/typescript">
+const message:string = "Last Update: " + new Date();
+console.log(message);
+</script><br>
 <script type="text/javascript">
 var day = new Date(document.lastModified);
 var y = day.getFullYear();			// Year
