--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 <li style="margin-top:0.25em"><a href="https://qiita.com/AlohaTech" rel="nofollow" style="color:rgb(3,102,214)">Qiita</a></li>
 
+<li style="margin-top:0.25em"><a href="https://zenn.dev/aloha_tech" rel="nofollow" style="color:rgb(3,102,214)">Zenn</a></li>
+
 <li style="margin-top:0.25em"><a href="https://www.slideshare.net/DaisukeKanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SlideShare</a>, <a href="https://speakerdeck.com/daisukekanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SpeakerDeck</a></li></ul>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#licenses" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Licenses/Lizenzen</h2>
