--- a/index.html
+++ b/index.html
@@ -272,23 +272,13 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 </blockquote>
 <script async src="//www.instagram.com/embed.js"></script>
 
-<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#publications" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Publications/Veröffentlichungen</h2>
-
-<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
-  <div style="margin:0px;padding:0px;" align="center">
-  <div style="margin:0px;padding:0px;line-height:1.3;">
-  <div style="margin:0px;padding:10px;line-height:1.3;overflow:auto;text-align:left;height:150px;">
-<li><a href="https://catalog.lib.kyushu-u.ac.jp/opac_download_md/1957507/Article_07.pdf" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">RIAM 2017 Report</a></li>
-<li style="margin-top:0.25em"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/blob/master/documents_slides/2019/master_Kanaizumi.pdf" style="color:rgb(3,102,214);outline-width:0px">Master Thesis</a></li></ul>
-<script src="https://gist.github.com/Daisuke-Kanaizumi/ed3be3becf820dade55222710fe7ce7c.js"></script>
-</div></div></div>
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#educational-experience" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Educational Experiences</h2>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Analytic Mechanics (1 semester)</li>
 
-<li style="margin-top:0.25em">Mathematics of Simulation (MATLAB class, 1 semester)</li>
+<li style="margin-top:0.25em">MATLAB class, 1 semester</li>
 
-<li style="margin-top:0.25em">Math Q&amp;A ＠Waseda (1.5 years, October 2017-January 2019)</li>
+<li style="margin-top:0.25em">Math Q&amp;A (1.5 years, October 2017-January 2019)</li>
 
 <li style="margin-top:0.25em">Math &amp; English tutor at an online prep school (2 years)</li></ul>
 
