--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#educational-experience" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Educational Experiences</h2>
 
-<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Analytic Mechanics (1 semester)</li>
+<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Mechanics (1 semester)</li>
 
 <li style="margin-top:0.25em">MATLAB class, 1 semester</li>
 
