--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <h1 style="margin-right:0px;margin-bottom:16px;margin-left:0px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin-top:0px!important">Biography/Biographie</h1>
-
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
 <li>English Name: Derek/Duke, kanji: Dai$\to$杕 (NOT included on standard dictionaries)</li>
 <li><p style="color:#000080">Went to Hualalai Academy</p> (Currently known as <a href="https://makualani.com/" rel="nofollow noreferrer noopener" target="_blank">Makua Lani Christian Academy</a> and <a href="https://kuleanaeducation.weebly.com/" rel="nofollow noreferrer noopener" target="_blank">Kuleana Education Academy</a>)</li>
 <li>Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a>
 </li>
 <li><b>HTML5, LaTeX, Markdown and Google Sites user (More than 5 years, supported websites for several non-profits)</b></li>
-<li>Obtained Master of Engineering at the Graduate School of Waseda Univ. (2019, March)</li>
+<li>Obtained Master of Engineering at Graduate School (2019, March)</li>
 <li>Adopted by VIA Social Impact Accelerator Program (2020, March)</li>
 <li>Website manager and Chief Information Officer of <a class="dhtgD aw5Odc" href="https://sites.google.com/view/miract/home" target="_blank">MIRACT</a> (2020, April)</li>
 <li><a href="https://www.facebook.com/2.5million.for.Kyushu/">九州250万人会議</a>を応援しています (2020, June)</li>
 </ul>
+</div>
   <div style="margin:0px;padding:0px;" align="center">
     <div style="margin:0px;padding:0px;line-height:1.3;">
       <div style="margin:0px;padding:10px;line-height:1.3;overflow:auto;text-align:left;height:350px;">
