--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <h1 style="margin-right:0px;margin-bottom:16px;margin-left:0px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin-top:0px!important">Biography/Biographie</h1>
+<div style="overflow:scroll; width:100%; height:180px">
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
 <li>English Name: Derek/Duke, kanji: Dai$\to$杕 (NOT included on standard dictionaries)</li>
 <li><p style="color:#000080">Went to Hualalai Academy</p> (Currently known as <a href="https://makualani.com/" rel="nofollow noreferrer noopener" target="_blank">Makua Lani Christian Academy</a> and <a href="https://kuleanaeducation.weebly.com/" rel="nofollow noreferrer noopener" target="_blank">Kuleana Education Academy</a>)</li>
