--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1 style="margin-right:0px;margin-bottom:16px;margin-left:0px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin-top:0px!important">Biography/Biographie</h1>
 <div style="overflow:scroll; width:100%; height:180px">
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
-<li>English Name: Derek/Duke, kanji: Dai$\to$杕 (NOT included on standard dictionaries)</li>
 <li><p style="color:#000080">Went to Hualalai Academy</p> (Currently known as <a href="https://makualani.com/" rel="nofollow noreferrer noopener" target="_blank">Makua Lani Christian Academy</a> and <a href="https://kuleanaeducation.weebly.com/" rel="nofollow noreferrer noopener" target="_blank">Kuleana Education Academy</a>)</li>
 <li>Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a>
 </li>
 <li><b>HTML5, LaTeX, Markdown and Google Sites user (More than 5 years, supported websites for several non-profits)</b></li>
-<li>Obtained Master of Engineering at Graduate School (2019, March)</li>
 <li>Adopted by VIA Social Impact Accelerator Program (2020, March)</li>
 <li>Website manager and Chief Information Officer of <a class="dhtgD aw5Odc" href="https://sites.google.com/view/miract/home" target="_blank">MIRACT</a> (2020, April)</li>
 <li><a href="https://www.facebook.com/2.5million.for.Kyushu/">九州250万人会議</a>を応援しています (2020, June)</li>
@@ -67,15 +65,12 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
 
-<li><a href="https://try.gitea.io/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Gitea</a>, <a href="https://gitlab.com/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">GitLab</a></li>
-
-<li style="margin-top:0.25em"><a href="https://www.linkedin.com/in/daisuke-kanaizumi-70b95015a/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">LinkedIn</a></li>
-
+<!--
+  <li><a href="https://try.gitea.io/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Gitea</a>, <a href="https://gitlab.com/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">GitLab</a></li>
+-->
 <li style="margin-top:0.25em"><a href="https://qiita.com/AlohaTech" rel="nofollow" style="color:rgb(3,102,214)">Qiita</a></li>
 
 <li style="margin-top:0.25em"><a href="https://zenn.dev/aloha_tech" rel="nofollow" style="color:rgb(3,102,214)">Zenn</a></li>
-
-<li style="margin-top:0.25em"><a href="https://www.slideshare.net/DaisukeKanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SlideShare</a>, <a href="https://speakerdeck.com/daisukekanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SpeakerDeck</a></li></ul>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#licenses" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Licenses/Lizenzen</h2>
 
@@ -329,25 +324,15 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 <h1 style="margin:24px 0px 16px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239)">People Who I Know &amp; Met Before (Japan)</h1>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px"><li><a href="http://gasin.hatenadiary.jp/" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Gasin</a></li>
 <li><a href="https://www.agos.co.jp/reason/success_voice/2015_ug_h_u.html" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Hikaru Ura</a></li>
-<li><a href="https://www.researchgate.net/profile/Minako_Kuno/amp" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Minako Kuno</a></li>
-<li><a href="http://yufuke.main.jp/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Yusuke Fuke</a>&nbsp;(<a href="https://scholar.google.co.jp/citations?user=50TB5pEAAAAJ&amp;hl=ja" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Google Scholar</a>)</li>
-<li style="margin-top:0.25em"><a href="https://researchmap.jp/ygussany/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Yutaro Yamaguchi</a></li></ul>
 <div>
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">VIA</h2>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px"><li><a href="https://misscolle.com/kyushu2015/profile/6" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Manatsu Hirashima</a></li>
 <li><a href="http://www.todaishimbun.org/author/ntskhdk/" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Natsuki Hidaka</a></li>
-<li><a href="https://www.linkedin.com/in/tokuyama-yoshiaki" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Yoshiaki Tokuyama</a></li>
 <li style="margin-top:0.25em"><a href="https://note.mu/shokei612" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Yoshitaka Miura</a></li></ul>
 </div>
-<div>
 </div>
-<h1 style="margin:24px 0px 16px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239)">People Who I Know &amp; Met Before (EU/PRC/Asia)</h1>
-<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px"><li><a href="https://scholar.google.co.jp/citations?hl=ja&amp;user=8lFqJGMAAAAJ" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Ge Hangli</a></li>
-<li><a href="https://scholar.google.com/citations?user=2hjp1TcAAAAJ&amp;hl=en" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Hariz Zain</a></li>
-<li style="margin-top:0.25em"><a href="https://scholar.google.com/citations?user=6e3OuW8AAAAJ&amp;hl=en" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Joey Zhouyuan Li</a></li>
-<li style="margin-top:0.25em"><a href="https://medium.com/@dp.kihopark" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Kiho Park</a></li>
-<li style="margin-top:0.25em"><a href="https://www.researchgate.net/profile/Polim_Chan" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Polim Chan</a></li>
-</ul>
+</div>
+<h1 style="margin:24px 0px 16px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239)">People Who I Know &amp; Met Before</h1>
 <div>
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">VIA Programs</h2>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px"><li><a href="https://www.linkedin.com/in/christy-inhulsen-a276846" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Christy Inhulsen</a></li>
@@ -357,8 +342,7 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 </div>
 <div style="font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;color:rgb(88,96,105)!important;margin-top:32px!important"></div>
 
-</div></div></div>
-
+</div>
 Copyright &copy; 2015<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, All Rights Reserved.<br>
 <script type="text/javascript">document.write("Last Update: " + new Date(document.lastModified))</script><br>
 <script type="text/typescript">
