--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     displayIndent: "2em"
   });
 </script>
-<META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<META http-equiv="Content-Type" content="text/html; charset=ISO-2022-JP">
-<META http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-<META http-equiv="Content-Type" content="text/html; charset=EUC-JP">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-2022-JP">
+<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+<meta http-equiv="Content-Type" content="text/html; charset=EUC-JP">
 <script type="text/javascript" src="http://gc.kis.scr.kaspersky-labs.com/1B74BD89-2A22-4B93-B451-1C9E1052A0EC/main.js" charset="UTF-8"></script>
 <style type="text/css">
  ul, ol { -ms-column-count: 2; -o-column-count: 2; -moz-column-count: 2; -khtml-column-count: 2; column-count: 2; }
